--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,3 +42,9 @@ padding: 1rem;
 .main-header__item a.active{
     color: #df911b;
 }
+
+.box{
+    background-color:purple;
+    height: 500px;
+    width: 500px;
+}
