--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -3,7 +3,8 @@
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
             <li class="main-header__item"><a class = "<%= path === '/' ? 'active' : ''%>" href="/">Home</a></li>
-            <li class="main-header__item"><a  class = "<%= path === '/login' ? 'active' : ''%>"href="/login">Login</a></li>
+            <li class="main-header__item"><a  class = "<%= path === '/users/login' ? 'active' : ''%>"href="/users/login">Login</a></li>
+            <li class="main-header__item"><a  class = "<%= path === '/gradients' ? 'active' : ''%>"href="/gradients">Gradient-creation</a></li>
         </ul>
     </nav>
 </header>
