--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,23 @@
 <%- include('includes/head.ejs')%>
 
     <body>
-    <%- include('includes/navigation.ejs')%> 
-            <div>
-                Login page
-            </div>
+        <%- include('includes/navigation.ejs')%>
 
-            <%- include('includes/end.ejs')%>
+            <form action="/users/login" method="post">
+                <div class ="form-group" >
+                    <label>Name</label>
+                    <input type= "text" class="form-control" name="name">
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" name="email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password">
+                </div>
+
+                <button type="submit" class="btn btn-warning btn-lg">Login</button>
+            </form>
+
+    <%- include('includes/end.ejs')%>
