--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,8 +43,8 @@ padding: 1rem;
     color: #df911b;
 }
 
-.box{
+/* .box{
     background-color:purple;
     height: 500px;
     width: 500px;
-}
+} */
