--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -1,7 +1,7 @@
 <%- include('includes/head.ejs')%>
 <body>
     <%- include('includes/navigation.ejs')%>
-    <form action= "/gradients" method ="post">
+    <form action= "/gradient/create" method ="post">
         <select name ="color1" >
             <option value="#FF0000">Red</option>
             <option value="#0000ff">Blue</option>
