--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -4,7 +4,8 @@
         <ul class="main-header__item-list">
             <li class="main-header__item"><a class = "<%= path === '/' ? 'active' : ''%>" href="/">Home</a></li>
             <li class="main-header__item"><a  class = "<%= path === '/users/login' ? 'active' : ''%>"href="/users/login">Login</a></li>
-            <li class="main-header__item"><a  class = "<%= path === '/gradients' ? 'active' : ''%>"href="/gradients">Gradient-creation</a></li>
+            <li class="main-header__item"><a  class = "<%= path === '/gradient/create' ? 'active' : ''%>"href="/gradient/create">Gradient-creation</a></li>
+            <li class="main-header__item"><a  class = "<%= path === '/gradient/library' ? 'active' : ''%>"href="/gradient/library">Gradient-library</a></li>
         </ul>
     </nav>
 </header>
