--- a/views/create-result.ejs
+++ b/views/create-result.ejs
@@ -23,15 +23,28 @@
 
       context.fillStyle = gradient;
       context.fillRect(0, 0, 500, 500);
-      const base64 = canvas.toDataURL('image/jpeg')
-      console.log(base64)
-     // document.write('<img src="'+image+'"/>');
+    //   const base64 = canvas.toDataURL('image/jpeg')
+    //   console.log(base64)
+    //  // document.write('<img src="'+image+'"/>');
 
     </script>
     <!-- <button class = "btn">Download</button> -->
-    <a href="javascript:canvas.toDataURL('image/jpeg');" download="download" >Download as jpeg</a>
+    <!-- <a href="javascript:canvas.toDataURL('image/jpeg');" download="download" >Download as jpeg</a>
     <a href="javascript:base64">Right click to download</a>
-    
+     -->
+     <form action ="/gradient/library" method = "post" >
+      <input type = "hidden" name = "title" value = '<%=title%>'>
+      <input type = "hidden" name = "color1" value = '<%=color1%>'>
+      <input type = "hidden" name = "color2" value = '<%=color2%>'>
+      <input type = "hidden" name = "tags" value = '<%=tags%>'>
+      <button type= "submit">Contribute to Library</button>
+     </form>
+      
+    <!-- <form method = "post">
+      <input type = "hidden" name =  "gradientId" value = "">
+      <button type= "submit">Save to favorites</button>
+    </form> -->
+
 
 
     <%- include('includes/end.ejs')%>
