--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -6,15 +6,15 @@
             <form action="/users/login" method="post">
                 <div class ="form-group" >
                     <label>Name</label>
-                    <input type= "text" class="form-control" name="name">
+                    <input type= "text" class="form-control" name="name" required>
                 </div>
                 <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control" name="email">
+                    <input type="text" class="form-control" name="email" required>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" name="password">
+                    <input type="password" class="form-control" name="password" required>
                 </div>
 
                 <button type="submit" class="btn btn-warning btn-lg">Sign Up</button>
