ejs and login changes

--- a/views/create-result.ejs
+++ b/views/create-result.ejs
@@ -32,12 +32,12 @@
     <!-- <a href="javascript:canvas.toDataURL('image/jpeg');" download="download" >Download as jpeg</a>
     <a href="javascript:base64">Right click to download</a>
      -->
-     <form action ="/gradient/library" method = "post" >
+     <form class = "form" action ="/gradient/library" method = "post" >
       <input type = "hidden" name = "title" value = '<%=title%>'>
       <input type = "hidden" name = "color1" value = '<%=color1%>'>
       <input type = "hidden" name = "color2" value = '<%=color2%>'>
       <input type = "hidden" name = "tags" value = '<%=tags%>'>
-      <button type= "submit">Contribute to Library</button>
+      <button class = "btn" type= "submit">Contribute to Library</button>
      </form>
       
     <!-- <form method = "post">
