--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -1,7 +1,7 @@
 <%- include('includes/head.ejs')%>
 <body>
     <%- include('includes/navigation.ejs')%>
-    <form action= "/gradient/create" method ="post">
+    <form class = "form" action= "/gradient/create" method ="post">
         <input type ="text" name = "title" required>
         <input type= "text" name ="tags" placeholder="seperate by comas">
         <select name ="color1" required>
