--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,21 +3,21 @@
     <body>
         <%- include('includes/navigation.ejs')%>
 
-            <form action="/users/login" method="post">
+            <form class = "form" action="/users/login" method="post">
                 <div class ="form-group" >
                     <label>Name</label>
-                    <input type= "text" class="form-control" name="name" required>
+                    <input type= "text" id = "name" class="form-control" name="name" required>
                 </div>
                 <div class="form-group">
-                    <label>Email</label>
-                    <input type="text" class="form-control" name="email" required>
+                    <label>E-mail</label>
+                    <input type="email" id = "email" class="form-control" name="email" required>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" name="password" required>
+                    <input type="password" id = "password" class="form-control" name="password" required>
                 </div>
 
-                <button type="submit" class="btn btn-warning btn-lg">Login</button>
+                <button type="submit" class="btn">Login</button>
             </form>
 
     <%- include('includes/end.ejs')%>
