--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,5 +7,7 @@
     <title><%=pageTitle%></title> 
     <link rel = "stylsheet" href = "/css/forms.css">
     <link rel = "stylesheet" href = "/css/main.css">
+    <link href="color-picker.css" rel="stylesheet">
+    <script src="color-picker.js" defer></script> 
     
 </head>
