--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -4,7 +4,9 @@
     <form class = "form" action= "/gradient/create" method ="post">
         <input type ="text" name = "title" required>
         <input type= "text" name ="tags" placeholder="seperate by comas">
-        <select name ="color1" required>
+        <input type="color" name="color1" required>
+          <input type = "color" name = "color2" required> 
+        <!-- <select name ="color1" required>
             <option value="#FF0000">Red</option>
             <option value="#0000ff">Blue</option>
             <option value="#FFFF00">Yellow</option>
@@ -13,7 +15,7 @@
             <option value="#FF0000">Red</option>
             <option value="#0000ff">Blue</option>
             <option value="#FFFF00">Yellow</option>
-        </select>
+        </select> -->
         <button class="btn" type="submit">Create Gradient</button>
     </form>
   
