--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Calibri;
+    font-family: Arial, Helvetica, sans-serif;
     }
     input[type=text], select {
     width: 25%;
