--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,8 @@ main{
 padding: 1rem;
 }
 
+/* header and navigation */
+
 .main-header {
     width: 100%;
     height: 56px;
@@ -75,7 +77,11 @@ padding: 1rem;
 .btn:hover{
     background-color: #E4B91C;
 }
-.form-input-text{
+
+input,label{
+    display: block;
+}
+input{
     height: 30px;
     width: 200px;
     border-radius: 5px;
@@ -85,15 +91,42 @@ padding: 1rem;
     box-sizing: border-box;
     display: inline-block;
 }
-.form-input-color{
+input[type = color]{
     height: 30px;
     width: 50px;
     border-radius: 5px;
-    border-style: none;
-    border-color: transparent;
+    outline:none;
+    outline-width: 0;
+    -webkit-appearance: none;
+	border: none;
     box-sizing: border-box;
-    display: inline-block;
 }
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
+
+/* gradient canvas */
+.canvas {
+    padding: 0;
+    margin: auto;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 9px;
+}
+
+.container{
+    margin-top: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
 
 
 
