--- a/views/includes/gradient-view.ejs
+++ b/views/includes/gradient-view.ejs
@@ -1,13 +1,10 @@
-<%- include('includes/head.ejs')%>
+<h1><%=title%></h1>
 
-<body>
-  <%- include('includes/navigation.ejs')%>
-    <!-- <h1><%=title%> </h1> -->
-<%-include('includes/gradient-view.ejs')%>
-
-    <!-- <canvas class ="canvas" id="gradient-canvas" width="500" height="500"></canvas>
+<canvas class ="canvas" id="gradient-canvas" width="500" height="500"></canvas>
     <script>
+
       const canvas = document.getElementById("gradient-canvas");
+      console.log(canvas);
       const context = canvas.getContext("2d");
       const gradient = context.createLinearGradient(0,0, 500,0);
       gradient.addColorStop(0, '<%=color1%>');
@@ -15,7 +12,5 @@
 
       context.fillStyle = gradient;
       context.fillRect(0, 0, 500, 500);
-      </script> -->
 
-<%- include('includes/end.ejs')%>
-      
+    </script>
