--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,21 +3,22 @@
     <body>
         <%- include('includes/navigation.ejs')%>
 
-            <form class = "form" action="/users/login" method="post">
-                <div class ="form-group" >
+            <form class="form" action="/users/login" method="post">
+                <div class="form-group">
                     <label>Name</label>
-                    <input type= "text" id = "name" class="form-control" name="name" required>
+                    <input type="text" id="name" class="form-control" name="name" required>
                 </div>
                 <div class="form-group">
                     <label>E-mail</label>
-                    <input type="email" id = "email" class="form-control" name="email" required>
+                    <input type="email" id="email" class="form-control" name="email" required>
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" id = "password" class="form-control" name="password" required>
+                    <input type="password" id="password" class="form-control" name="password" required>
                 </div>
-
-                <button type="submit" class="btn">Login</button>
+                <div class="form-group">
+                    <button type="submit" class="btn">Login</button>
+                </div>
             </form>
 
-    <%- include('includes/end.ejs')%>
+            <%- include('includes/end.ejs')%>
