--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -16,8 +16,9 @@
                 <label>Password</label>
                 <input type="password" id = "password" class="form-control" name="password" required>
             </div>
-
+            <div class = "form-group">
             <button type="submit" class="btn">Login</button>
+            </div>
         </form>
 
 
