--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -16,6 +16,11 @@
                 <label>Password</label>
                 <input type="password" id = "password" class="form-control" name="password" required>
             </div>
+            <!-- <div class="form-group">
+                <label>Confirm Password</label>
+                <input type="password" id = "password" class="form-control" name="confirmPassword" required> 
+            </div> -->
+
             <div class = "form-group">
             <button type="submit" class="btn">Login</button>
             </div>
