--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -24,6 +24,7 @@
                 <div class = "form-group">
                 <button class="btn" type="submit">Create Gradient</button>
             </div>
+            <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
 
             <%- include('includes/end.ejs')%>
