--- a/views/create-result.ejs
+++ b/views/create-result.ejs
@@ -25,6 +25,7 @@
       <input type = "hidden" name = "color1" value = '<%=color1%>'>
       <input type = "hidden" name = "color2" value = '<%=color2%>'>
       <input type = "hidden" name = "tags" value = '<%=tags%>'>
+      <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
       <button class = "btn" type= "submit">Contribute to Library</button>
      </form>
 
