--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,6 +19,7 @@
                 <div class="form-group">
                     <button type="submit" class="btn">Login</button>
                 </div>
+                <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
 
             <%- include('includes/end.ejs')%>
