--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,5 +3,6 @@
 <body>
   <%- include('includes/navigation.ejs')%>
     <h1>Your profile</h1>
+      <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
 
     <%- include('includes/end.ejs')%>
