--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -20,9 +20,10 @@
                 <label>Confirm Password</label>
                 <input type="password" id = "password" class="form-control" name="confirmPassword" required> 
             </div> -->
+            <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
 
             <div class = "form-group">
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn">Sign-up</button>
             </div>
         </form>
 
