--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -3,7 +3,7 @@
     <body>
         <%- include('includes/navigation.ejs')%>
 
-            <form class="form" action="/users/login" method="post">
+            <form class="form" action="/users/reset" method="post">
                 <div class="form-group">
                     <label>Name</label>
                     <input type="text" id="name" class="form-control" name="name" required>
@@ -13,14 +13,9 @@
                     <input type="email" id="email" class="form-control" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label>Password</label>
-                    <input type="password" id="password" class="form-control" name="password" required>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn">Login</button>
+                    <button type="submit" class="btn">Reset Password</button>
                 </div>
                 <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
-            <a href="/users/reset">Reset Password</a>
 
             <%- include('includes/end.ejs')%>
