--- a/views/create-result.ejs
+++ b/views/create-result.ejs
@@ -27,6 +27,7 @@
       <input type = "hidden" name = "tags" value = '<%=tags%>'>
       <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
       <button class = "btn" type= "submit">Contribute to Library</button>
+      <button class = "btn" type= "submit">Add to favorites</button>
      </form>
 
 
