--- a/views/create-result.ejs
+++ b/views/create-result.ejs
@@ -27,8 +27,13 @@
       <input type = "hidden" name = "tags" value = '<%=tags%>'>
       <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
       <button class = "btn" type= "submit">Contribute to Library</button>
+    </form>
+
+    <form class = "form" action = "/users/favorites" method="post">
       <button class = "btn" type= "submit">Add to favorites</button>
-     </form>
+      <input type="hidden" name="userId" value='<%=user._id%>'> 
+    </form>
+   
 
 
     <%- include('includes/end.ejs')%>
