--- a/views/get-all-users.ejs
+++ b/views/get-all-users.ejs
@@ -3,8 +3,9 @@
 <body>
   <%- include('includes/navigation.ejs')%>
     <h1>Users</h1>
-    <% for(let i=0; i<users.length; i++){ %> 
-        <div><% users[i].name %> </div>
-        <% } %> 
+    <% for(let i=0; i<users.length; i++) { %>
+       <a href ="/admin/users/<%=users[i]._id%>"><%= users[i].name %></a>
+       <br>
+    <% } %> 
 
     <%- include('includes/end.ejs')%>
