--- a/public/css/main.css
+++ b/public/css/main.css
@@ -139,6 +139,20 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 
+.profile-flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+.profile-block{
+ display:block;
+
+}
+
+
+
 
 
 
