--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,14 +2,28 @@
 
 <body>
   <%- include('includes/navigation.ejs')%>
+  <div class = "profile-flex">
+    <div class = "profile-block">
     <h1>Your profile</h1>
       <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
-      <div><%=user.name%></div>
-      <div><%=user.email%></div>
-      <% if (userId == user._id) { %>
-      <a href= '/users/profile/edit/<%=user._id%>'>Edit profile</a>
-        <%}%>
-  
-    
+      <div class = "form-group"><%=user.name%></div>
+      <div class = "form-group"><%=user.email%></div>
 
+     <h2>Favorites</h2>
+     <div class = "form-group">
+    <%- include('includes/library.ejs')%>
+  </div>
+
+      <% if (userId == user._id) { %>
+      <div clas = "form-group">
+      <a href= '/users/profile/edit/<%=user._id%>'>Edit profile</a>
+    </div>
+        <%}%>
+
+        
+      </div>
+  </div>
+     
+  
+  
     <%- include('includes/end.ejs')%>
