--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@ body {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
+    height: 100vh;
+    width: 100vw; 
 }
 main{
 padding: 1rem;
@@ -29,11 +31,14 @@ padding: 1rem;
     margin: 0;
     padding: 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main-header__item {
     margin: 0 1rem;
     padding: 0;
+
 
 }
 
@@ -60,13 +65,13 @@ font-size: 16px;
 
 /* forms stuff */
 
-.form{
+/* .form{
     display: inline-block;
     align-items: center;
     justify-content: center;
     margin: 1rem;
     box-sizing: border-box;
-}
+} */
 .form-group{
    font-family: Arial, Helvetica, sans-serif;
    margin: 1rem;
@@ -122,14 +127,36 @@ input[type="color"]::-webkit-color-swatch {
 /* gradient canvas */
 .canvas {
     padding: 0;
-    margin: auto;
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    margin: 5px;
     border-radius: 9px;
+    height: 100vh;
+    width: 75vw;
+}
+.gradient-container{
+    display: flex;
+    left: 25vw;
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.info-container{
+    height: 100vh;
+    width: 25vw;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.info-subcontainer{
+    display: block;
+    align-items: center;
+    justify-content: center;
+    margin: 10px; 
+}
+.btns-container{
+    display: flex;
 }
 
 .container{
