--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,7 +78,7 @@ font-size: 16px;
 }
 
 .btn{
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif;
     margin: 5px;
     background-color: #df911b;
     color: black;
@@ -87,12 +87,24 @@ font-size: 16px;
     width: 100px;
     cursor: pointer;
     padding: 0;
-    border: none;
+    border: none; */
+
+   
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
+    
 
 }
-.btn:hover{
+
+
+/* .btn:hover{
     background-color: #E4B91C;
-}
+} */
 
 input,label{
     display: block;
