--- a/views/includes/gradient-view.ejs
+++ b/views/includes/gradient-view.ejs
@@ -24,7 +24,7 @@
       <input type = "hidden" name = "color1" value = '<%=color1%>'>
       <input type = "hidden" name = "color2" value = '<%=color2%>'>
       <input type = "hidden" name = "tags" value = '<%=tags%>'>
-      <button class = "btn" type= "submit">Delete</button>
+      <button class = "btn" type= "submit"><i class="fas fa-trash-alt"></i></button>
     </form>
 
 
