--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -2,10 +2,11 @@
 
 <body>
     <%- include('includes/navigation.ejs')%>
-
+    <%- include('includes/main-container.ejs')%>
+    <%- include('includes/container.ejs')%>
     
 
-    <div class ="container">
+    <!-- <div class ="container"> -->
         <!-- <script>
           function makeGradient(color1, color2, canvasId){
           const canvas = document.getElementById(canvasId);
