--- a/views/new-password.ejs
+++ b/views/new-password.ejs
@@ -2,6 +2,8 @@
 
     <body>
         <%- include('includes/navigation.ejs')%>
+        <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
         
             <form class="form" action="/users/new-password" method="post">
                 <div class="form-group">
