--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,10 +3,19 @@ body {
     margin: 0;
     font-family: sans-serif;
     height: 100vh;
-    width: 100vw; 
+    width: 100vw;
+  
 }
-main{
+.main{
+display: flex;
+justify-content: center;
+align-items: center;
 padding: 1rem;
+height: 90vh;
+width: 100vw;
+}
+.container{
+max-width: 75vw;
 }
 
 /* header and navigation */
@@ -49,7 +58,7 @@ padding: 1rem;
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active{
-    color: #df911b;
+    border-bottom:solid 2px white;
 }
 
 .nav_button{
@@ -60,36 +69,23 @@ background: none;
 font-size: 16px;
 }
 .nav_button:hover{
-    color:#df911b;
+    border-bottom:solid 2px white;
 }
 
 /* forms stuff */
 
-/* .form{
-    display: inline-block;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem;
-    box-sizing: border-box;
-} */
+.form-subcontainer{
+    display: block;
+}
+.form-title{
+    font-size: 25px;
+}
 .form-group{
    font-family: Arial, Helvetica, sans-serif;
    margin: 1rem;
 }
 
 .btn{
-    /* font-family: Arial, Helvetica, sans-serif;
-    margin: 5px;
-    background-color: #df911b;
-    color: black;
-    border-radius: 9px;
-    height: 40px;
-    width: 100px;
-    cursor: pointer;
-    padding: 0;
-    border: none; */
-
-   
         background: none;
         color: inherit;
         border: none;
@@ -98,20 +94,41 @@ font-size: 16px;
         cursor: pointer;
         outline: inherit;
     
+}
+button .fas, button .far{
+    height: 45px;
+    width: 45px;
+    font-size: 40px;
+    color: black;
+}
+.btn-text{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 5px;
+    font-size: 15px;
+    background-color:#853fe0;
+   color:white; 
+    border-radius: 20px;;
+    height: 40px;
+    width: 100px;
+    cursor: pointer;
+    padding: 0;
+    border: none; 
+
 
 }
-
-
-/* .btn:hover{
-    background-color: #E4B91C;
-} */
+.tag{
+    height: 15px;
+    border-radius: 5px;
+    background-color: #adadad; 
+    margin: 5px; 
+}
 
 input,label{
     display: block;
 }
 input{
     height: 30px;
-    width: 200px;
+    width: 75vw;
     border-radius: 5px;
     border-color: black;
     align-items: center;
@@ -136,29 +153,34 @@ input[type="color"]::-webkit-color-swatch {
 	border: none;
 }
 
+select{
+    height: 30px;
+    width: 75vw;
+    border: solid black;
+}
+
 /* gradient canvas */
 .canvas {
     padding: 0;
-    margin: 5px;
+    margin-right: 15px;
     border-radius: 9px;
-    height: 100vh;
-    width: 75vw;
+    height: 80vh;
+    width: 66.7vw;
 }
 .gradient-container{
     display: flex;
-    left: 25vw;
     height: 100vh;
     width: 100vw;
     align-items: center;
     justify-content: flex-end;
+
 }
 
 .info-container{
-    height: 100vh;
-    width: 25vw;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
+    width: 34vw; 
 }
 
 .info-subcontainer{
@@ -169,12 +191,6 @@ input[type="color"]::-webkit-color-swatch {
 }
 .btns-container{
     display: flex;
-}
-
-.container{
-    margin-top: 10%;
-    margin-right: 5%;
-    margin-left: 5%;
 }
 
 
