--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,6 +2,8 @@
 
 <body>
   <%- include('includes/navigation.ejs')%>
+  <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
     <h1>page not found</h1>
 
     <%- include('includes/end.ejs')%>
