--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,6 +2,8 @@
 
 <body>
   <%- include('includes/navigation.ejs')%>
+  <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
     <h1>Something went wrong</h1> 
     <p><%=message%></p>
 
