--- a/views/get-all-users.ejs
+++ b/views/get-all-users.ejs
@@ -2,6 +2,8 @@
 
 <body>
   <%- include('includes/navigation.ejs')%>
+  <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
     <h1>Users</h1>
     <% for(let i=0; i<users.length; i++) { %>
        <a href ="/admin/users/<%=users[i]._id%>"><%= users[i].name %></a>
