--- a/views/includes/gradient-view.ejs
+++ b/views/includes/gradient-view.ejs
@@ -2,24 +2,28 @@
 <div class ="gradient-container">
   <div class ="info-container">
   <div class = "info-subcontainer">
-    <h1><%=title%></h1>
-    <div><%=tags%></div>
+    <h1><%=title%></h1> 
+    <%for(let i=0; i<tags.length; i++ ){%> 
+       <div class="tag">#<%=tags[i]%></div>
+      <% } %> 
     <div class="btns-container">
     <form class = "from" action = "/users/favorites" method="post">
       <input type="hidden" name="userId" value='<%=userId%>'> 
       <input type="hidden" name="gradientId" value='<%=gradientId%>'> 
       <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
+      <input type="hidden" name="type" value ='<%=type%>'> 
       <input type = "hidden" name = "title" value = '<%=title%>'>
       <input type = "hidden" name = "color1" value = '<%=color1%>'>
       <input type = "hidden" name = "color2" value = '<%=color2%>'>
       <input type = "hidden" name = "tags" value = '<%=tags%>'>
-      <button class = "btn" type= "submit">Add to favorites</button>
+      <button class = "btn" type= "submit"><i class="far fa-star"></i></button>
     </form>
     
     <form class = "form" action = "/gradient/delete" method="post">
       <input type="hidden" name="userId" value='<%=userId%>'> 
       <input type="hidden" name="gradientId" value='<%=gradientId%>'> 
       <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
+      <input type="hidden" name="type" value ='<%=type%>'> 
       <input type = "hidden" name = "title" value = '<%=title%>'>
       <input type = "hidden" name = "color1" value = '<%=color1%>'>
       <input type = "hidden" name = "color2" value = '<%=color2%>'>
@@ -33,35 +37,65 @@
         <input type = "hidden" name = "title" value = '<%=title%>'>
         <input type = "hidden" name = "color1" value = '<%=color1%>'>
         <input type = "hidden" name = "color2" value = '<%=color2%>'>
+        <input type="hidden" name="type" value ='<%=type%>'> 
         <input type = "hidden" name = "tags" value = '<%=tags%>'>
         <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
         <input type="hidden" name="gradientId" value='<%=gradientId%>'> 
-        <button class = "btn" type= "submit">Contribute to Library</button>
+        <button class = "btn-text" type= "submit">Publish to library</button>
       </form>
       <% } %> 
   </div>
   </div>
 </div>
   
-<canvas class ="canvas" id="gradient-canvas" ></canvas>
+<canvas class ="canvas" id="gradient-canvas" height="500" width="500"></canvas>
 </div>
 
     <script>
 
       const canvas = document.getElementById("gradient-canvas");
-      console.log(canvas);
       const context = canvas.getContext("2d");
 
-     const canvasHeight = window.innerHeight/4;
-     const canvasWidth = window.innerWidth/2;
-
-      const gradient = context.createLinearGradient(0,0, 500,0);
+   let gradient; 
+     switch('<%=type%>'){
+      case 'horizontal':
+       gradient = context.createLinearGradient(0,0, 500,0);
       gradient.addColorStop(0, '<%=color1%>');
       gradient.addColorStop(1, '<%=color2%>');
-
       context.fillStyle = gradient;
       context.fillRect(0, 0, 500, 500);
+      break;
 
+
+      case 'vertical': 
+       gradient = context.createLinearGradient(0,0, 0,500)
+      gradient.addColorStop(0, '<%=color1%>');
+      gradient.addColorStop(1, '<%=color2%>');
+      context.fillStyle = gradient;
+      context.fillRect(0, 0, 500, 500);
+      break;
+
+      case 'radial':
+      gradient = context.createRadialGradient(300,300,30,300,300,300)
+      gradient.addColorStop(0, '<%=color1%>');
+      gradient.addColorStop(1, '<%=color2%>');
+      context.fillStyle = gradient;
+      context.fillRect(0, 0, 500, 500);
+        break;
+
+        case 'diagonal':
+        gradient = context.createLinearGradient(0,0,500,500)
+        gradient.addColorStop(0, '<%=color1%>');
+        gradient.addColorStop(1, '<%=color2%>');
+        context.fillStyle = gradient;
+        context.fillRect(0, 0, 500, 500);
+        break;
+        
+     }
+     
+
+     
+  
     </script>
  
 
