--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,11 @@
 
     <body>
         <%- include('includes/navigation.ejs')%>
-
+        <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
+        <div class="form-container">
+            <div class="form-subcontainer">
+            <div class="form-title">Login</div>
             <form class="form" action="/users/login" method="post">
                 <div class="form-group">
                     <label>Name</label>
@@ -17,10 +21,12 @@
                     <input type="password" id="password" class="form-control" name="password" required>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn">Login</button>
+                    <button type="submit" class="btn-text">Login</button>
                 </div>
                 <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
             <a href="/users/reset">Reset Password</a>
+        </div> 
+           </div>
 
             <%- include('includes/end.ejs')%>
