--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,8 @@
 
 <body>
   <%- include('includes/navigation.ejs')%>
+  <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
   <div class = "profile-flex">
     <div class = "profile-block">
     <h1>Your profile</h1>
