--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -2,6 +2,8 @@
 
     <body>
         <%- include('includes/navigation.ejs')%>
+        <%- include('includes/main-container.ejs')%>
+        <%- include('includes/container.ejs')%>
 
             <form class="form" action="/users/reset" method="post">
                 <div class="form-group">
