--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -4,8 +4,7 @@
     <%- include('includes/navigation.ejs')%>
     <%- include('includes/main-container.ejs')%>
     <%- include('includes/container.ejs')%>
-    
-
+    <h1>Favorites</h1>
     <!-- <div class ="container"> -->
         <!-- <script>
           function makeGradient(color1, color2, canvasId){
