--- a/views/library.ejs
+++ b/views/library.ejs
@@ -2,6 +2,8 @@
 
   <body>
     <%- include('includes/navigation.ejs')%>
+    <%- include('includes/main-container.ejs')%>
+    <%- include('includes/container.ejs')%>
       <h1>Gradient Library</h1>
       <form action="/gradient/search" method="post">
         <input id="query" class='searchBar' type="search" name="query" placeholder="search for gradients...">
