--- a/views/includes/main-container.ejs
+++ b/views/includes/main-container.ejs
@@ -1,1 +1,10 @@
+<div class="right-body">
+<div class="search-container">
+    
+      <%- include('../search.ejs') %> 
+    </div>
+
+
+
 <div class="main">
+   
