--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,51 +1,83 @@
 body {
+    display: flex;
     padding: 0;
     margin: 0;
     font-family: sans-serif;
     height: 100vh;
     width: 100vw;
+    align-items: right;
   
 }
+.right-body{
+    display: block;
+}
 .main{
-display: flex;
+/* display: flex;
 justify-content: center;
-align-items: center;
+align-items: center; */
+display: block;
 padding: 1rem;
-height: 90vh;
+height: 90vh; 
 width: 100vw;
 }
 .container{
 max-width: 75vw;
 }
 
+.search-container{
+    width: 100%;
+    height: 100px;
+    margin-top: 20px;
+    display: block;
+}
+
 /* header and navigation */
 
-.main-header {
+/* .main-header {
     width: 100%;
     height: 56px;
     background-color: #853fe0;
 
+} */
+
+
+.mian-header{
+    height: 100vh;
+    width: 200px;
+    background-color: #853fe0;
 }
 
-.main-header__nav {
+/* .main-header__nav {
     height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+} */
+
+
+.nav-bar-container{
+ height: 100vh;
+}
+
+.main-header__nav{
+    height: 100%;
+    display: block;
+    width: 200px;
+    background-color: #853fe0; 
 }
 
 .main-header__item-list {
     list-style: none;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
 }
 
+
 .main-header__item {
-    margin: 0 1rem;
+    /* margin: 0 1rem; */
+    margin: 20px;
     padding: 0;
 
 
@@ -54,11 +86,13 @@ max-width: 75vw;
 .main-header__item a {
     text-decoration: none;
     color: white;
+    font-size: 18px;
 }
 .main-header__item a:hover,
 .main-header__item a:active,
 .main-header__item a.active{
-    border-bottom:solid 2px white;
+   color:#4a018a; 
+   border-bottom: solid 2px #BC6FF1 ;
 }
 
 .nav_button{
@@ -66,7 +100,9 @@ border: none;
 padding: 0;
 color:white;
 background: none;
-font-size: 16px;
+font-size: 18px;
+/* margin: 10px; */
+
 }
 .nav_button:hover{
     border-bottom:solid 2px white;
@@ -94,6 +130,9 @@ font-size: 16px;
         cursor: pointer;
         outline: inherit;
     
+}
+.btn-text:hover{
+    background-color:  #52057B; ;
 }
 button .fas, button .far{
     height: 45px;
