--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,5 +1,6 @@
 <body>
     <script src="https://kit.fontawesome.com/9eb54e81b4.js" crossorigin="anonymous"></script>
+
 <header class="main-header">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
@@ -15,7 +16,7 @@
                     </ul>
                 </ul>
                     <ul class="main-header__item-list">
-                    <il class="main-header__item"><form action="/users/logout" method="post"><input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'><button class="nav_button" type="submit">Logout</button></form></il>
+                    <il class="main-header__item"><form action="/users/logout" method="post" class="main-header__item"><input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'><button class="nav_button" type="submit">Logout</button></form></il>
                     <% if (locals.isAdmin == true) { %>
                         <li class="main-header__item"><a  class = "<%= path === '/admin/users' ? 'active' : ''%>"href="/admin/users">Users</a></li>
                     <% } %>
@@ -31,3 +32,4 @@
         
     </nav>
 </header>
+
