--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,17 +1,21 @@
+
 <%- include('includes/head.ejs')%>
 
 <body>
   <%- include('includes/navigation.ejs')%>
+  <!-- <div class="right-body"> -->
+    <div class="search-container">
+        <form action="/gradient/search" method="post">
+            <input id="query" class='searchBar' type="search" name="query" placeholder="search for gradients...">
+            <button class="btn" type="submit">Search</button>
+            <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
+          </form>
+          <div class="search-result">We found <%=count%> resutls for "<%=query%>"</div>
+    </div>
 
-
-  <form action="/gradient/search" method="post">
-    <input id="query" class='searchBar' type="search" name="query" placeholder="search for gradients...">
-    <button class="btn" type="submit">Search</button>
-    <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
-  </form>
- <h2>We found <%=count%> resutls for "<%=query%>"</h2>
- 
-
-    <%-include('includes/library.ejs')%>
+    <%- include('includes/search.ejs')%>
+    
+        <%- include('includes/container.ejs')%>
 
     <%- include('includes/end.ejs')%>
+
