--- a/views/create-result.ejs
+++ b/views/create-result.ejs
@@ -1,8 +1,13 @@
 <%- include('includes/head.ejs')%>
 
 <body>
-  <%- include('includes/navigation.ejs')%>
-    <!-- <h1><%=title%></h1> -->
+
+  <div class="top">
+
+    <%- include('includes/search2.ejs')%>
+    <%- include('includes/navigation2.ejs')%>
+
+    <div class="main">
 
     <%-include('includes/gradient-view.ejs')%>
     <!-- <canvas class ="canvas" id="gradient-canvas" width="500" height="500"></canvas>
@@ -57,6 +62,10 @@
 
 
    
+  </div>
+    
+</div>
 
+</body>
 
     <%- include('includes/end.ejs')%>
