--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,9 +1,14 @@
 <%- include('includes/head.ejs')%>
 
     <body>
-        <%- include('includes/navigation.ejs')%>
-        <%- include('includes/main-container.ejs')%>
-        <%- include('includes/container.ejs')%>
+            <div class="top">
+    
+                <%- include('includes/search2.ejs')%>
+                <%- include('includes/navigation2.ejs')%>
+                <div class="main">
+
+
+            
         <div class="form-container">
             <div class="form-subcontainer">
         <div class="form-title">Sign up</div>
@@ -32,6 +37,9 @@
         </form>
     </div> 
         </div> 
+        </div>
+            </div>
+            </body>
 
 
     <%- include('includes/end.ejs')%>
