--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,9 +1,18 @@
 <%- include('includes/head.ejs')%>
 
 <body>
-  <%- include('includes/navigation.ejs')%>
-  <%- include('includes/main-container.ejs')%>
-        <%- include('includes/container.ejs')%>
-    <h1>page not found</h1>
 
-    <%- include('includes/end.ejs')%>
+  <div class="top">
+
+    <%- include('includes/search2.ejs')%>
+    <%- include('includes/navigation2.ejs')%>
+
+    <div class="main">
+      <h1>Page not found</h1>
+    </div>
+    
+  </div>
+
+</body>
+
+<%- include('includes/end.ejs')%>
