--- a/views/create-form.ejs
+++ b/views/create-form.ejs
@@ -1,10 +1,16 @@
 <%- include('includes/head.ejs')%>
 
     <body>
-        <link rel="stylsheet" href="../public/css/forms.css">
-        <%- include('includes/navigation.ejs')%>
-        <%- include('includes/main-container.ejs')%>
-        <%- include('includes/container.ejs')%>
+
+
+            <div class="top">
+          
+              <%- include('includes/search2.ejs')%>
+              <%- include('includes/navigation2.ejs')%>
+
+           <div class="main">
+
+            
         <div class="form-container">
         <div class="form-subcontainer">
             <h1>Create your gradient...</h1>
@@ -44,5 +50,11 @@
             </form>
         </div>
         </div>
+
+    </div>
+    
+</div>
+
+</body>
 
             <%- include('includes/end.ejs')%>
