--- a/views/get-all-users.ejs
+++ b/views/get-all-users.ejs
@@ -1,13 +1,21 @@
 <%- include('includes/head.ejs')%>
 
 <body>
-  <%- include('includes/navigation.ejs')%>
-  <%- include('includes/main-container.ejs')%>
-        <%- include('includes/container.ejs')%>
+   <div class="top">
+
+      <%- include('includes/search2.ejs')%>
+      <%- include('includes/navigation2.ejs')%>
+  
+      <div class="main">
     <h1>Users</h1>
     <% for(let i=0; i<users.length; i++) { %>
        <a href ="/admin/users/<%=users[i]._id%>"><%= users[i].name %></a>
        <br>
     <% } %> 
+   </div>
+    
+</div>
+
+</body>
 
     <%- include('includes/end.ejs')%>
