--- a/views/gradient-view.ejs
+++ b/views/gradient-view.ejs
@@ -1,7 +1,18 @@
 <%- include('includes/head.ejs')%>
 
 <body>
-  <%- include('includes/navigation.ejs')%>
-<%-include('includes/gradient-view.ejs')%>
+  <div class="top">
+
+    <%- include('includes/search2.ejs')%>
+    <%- include('includes/navigation2.ejs')%>
+    <div class="main">
+  <%- include('includes/gradient-view.ejs') %> 
+    </div>
+    
+  </div>
+
+</body>
+
+
 <%- include('includes/end.ejs')%>
       
