--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,7 +7,5 @@
     <title><%=pageTitle%></title> 
     <link rel = "stylesheet" href = "/css/main.css">
     <link rel = "stylsheet" href = "/css/forms.css">
-   
-    
-    
+    <script src="https://kit.fontawesome.com/9eb54e81b4.js" crossorigin="anonymous"></script>
 </head>
