--- a/views/includes/search.ejs
+++ b/views/includes/search.ejs
@@ -1,7 +1,7 @@
-<%- include('head.ejs')%>
+<!-- <%- include('head.ejs')%>
 
 <body>
-  <%- include('navigation.ejs')%>
+  <%- include('navigation.ejs')%> -->
 
 
   <form action="/gradient/search" method="post">
@@ -13,6 +13,6 @@
 
  
 
-    <%-include('library.ejs')%>
+    <!-- <%-include('library.ejs')%>
 
-    <%- include('end.ejs')%>
+    <%- include('end.ejs')%> -->
