--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,18 @@
 
 <%- include('includes/head.ejs') %>
 <body>
-    <%- include('includes/navigation.ejs')%>
-    <h1> Hello world</h1>
+   
+    <div class="top">
+
+        <%- include('includes/search2.ejs')%>
+        <%- include('includes/navigation2.ejs')%>
+    
+        <div class="main">
+          <h1>Home page</h1>
+        </div>
+        
+      </div>
+    
+    </body>
+    
     <%- include('includes/end.ejs')%>
