--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,31 +1,45 @@
 <%- include('includes/head.ejs')%>
 
-<body>
-  <%- include('includes/navigation.ejs')%>
-  <%- include('includes/main-container.ejs')%>
-        <%- include('includes/container.ejs')%>
-  <div class = "profile-flex">
-    <div class = "profile-block">
-    <h1>Your profile</h1>
-      <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
-      <div class = "form-group"><%=user.name%></div>
-      <div class = "form-group"><%=user.email%></div>
+  <body>
 
-     <h2>Favorites</h2>
-     <div class = "form-group">
-    <%- include('includes/library.ejs')%>
-  </div>
+    <div class="top">
 
-      <% if (userId == user._id) { %>
-      <div clas = "form-group">
-      <a href= '/users/profile/edit/<%=user._id%>'>Edit profile</a>
+      <%- include('includes/search2.ejs')%>
+        <%- include('includes/navigation2.ejs')%>
+        <div class="main">
+
+          <div class="profile-flex">
+            <div class="profile-block">
+              <h1>Your profile</h1>
+              <input type="hidden" name="_csrf" value='<%=csrfToken%>'>
+              <div class="form-group">
+                <%=user.name%>
+              </div>
+              <div class="form-group">
+                <%=user.email%>
+              </div>
+
+              <h2>Favorites</h2>
+              <div class="form-group">
+                <%- include('includes/library.ejs')%>
+              </div>
+
+              <% if (userId==user._id) { %>
+                <div clas="form-group">
+                  <a href='/users/profile/edit/<%=user._id%>'>Edit profile</a>
+                </div>
+                <%}%>
+
+
+            </div>
+          </div>
+
+
     </div>
-        <%}%>
 
-        
-      </div>
-  </div>
-     
-  
-  
-    <%- include('includes/end.ejs')%>
+    </div>
+
+  </body>
+
+
+  <%- include('includes/end.ejs')%>
