--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,9 +1,12 @@
 <%- include('includes/head.ejs')%>
 
     <body>
-        <%- include('includes/navigation.ejs')%>
-        <%- include('includes/main-container.ejs')%>
-        <%- include('includes/container.ejs')%>
+        <div class="top">
+
+            <%- include('includes/search2.ejs')%>
+            <%- include('includes/navigation2.ejs')%>
+
+            <div class="main">
 
             <form class="form" action="/users/reset" method="post">
                 <div class="form-group">
@@ -19,5 +22,9 @@
                 </div>
                 <input type ="hidden" name ="_csrf" value= '<%=csrfToken%>'>
             </form>
+
+        </div>
+    </div>
+        </body>
 
             <%- include('includes/end.ejs')%>
